fix review username alignment with review stars

--- a/app/assets/stylesheets/business_show.scss
+++ b/app/assets/stylesheets/business_show.scss
@@ -43,7 +43,7 @@
     margin-bottom: 10px;
 }
 
-.show-page-main-aside main p {
+#show-page-category-show {
     margin-top: 10px;
 }
 
